Add deploy actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: TestProj
+name: Deploy Proj
 on: push
 jobs:
     test:
@@ -14,3 +14,18 @@ jobs:
               run: npm ci
             - name: Run tests
               run: npm test
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get code
+              uses: actions/checkout@v3
+            - name: Setup Node
+              uses: actions/setup-node@v3
+              with:
+                node-version: 18 
+            - name: Install dependencies
+              run: npm ci
+            - name: Build proj
+              run: npm run build
+            - name: Deploy proj
+              run: echo "Deploying..."
